# github-assistance

./: .coverage  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  ROADMAP.md  SECRETS_SETUP.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  TROUBLESHOOTING.md  agents.md  plan_review_request.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tech_debt.py  security.txt  test_gh.py  test_gh10.py  test_gh11.py  test_gh12.py  test_gh13.py  test_gh14.py  test_gh15.py  test_gh16.py  test_gh17.py  test_gh2.py  test_gh3.py  test_gh4.py  test_gh5.py  test_gh6.py  test_gh7.py  (+4 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/actions/setup-ollama/: action.yml
.github/workflows/: agent-runner.yml  branch-cleaner.yml  ci-health.yml  ci.yml  code-reviewer.yml  codeql-analysis.yml  codex-improvements.yml  conflict-resolver.yml  daily-project-creator.yml  dependency-risk.yml  deploy.yml  docker-build.yml  generate_docs.yml  gitleaks-scan.yml  interface-developer.yml  issue-escalation.yml  jules-api-probe.yml  jules-tracker.yml  notify-merge.yml  pr-assistant.yml  pr-sla.yml  product-manager.yml  project-creator.yml  project-health.yml  release-watcher.yml  secret-remover.yml  security-scanner.yml  senior-developer.yml  validate.yml
config/: repositories.json
docs/: PROJECT_HEALTH.md
scripts/: check_no_cron_workflows.py  generate_missing_docs.py
src/: agent.py  ai_client.py  github_api_cache.py  github_client.py  main.py  run_agent.py  scripts.py  test_locally.py  vibe_code_client.py
src/agents/: __init__.py  base_agent.py  batch_runner.py  jules_manager.py  metrics.py  opencode_local.py  opencode_runner.py  orchestration.py  registry.py  repo_manager.py  reporting.py  utils.py
src/agents/branch_cleaner/: agent.py
src/agents/ci_health/: __init__.py  agent.py  instructions.md  utils.py
src/agents/code_reviewer/: __init__.py  agent.py
src/agents/conflict_resolver/: agent.py  notifications.py
src/agents/dependency_risk/: __init__.py  agent.py  instructions.md
src/agents/intelligence_standardizer/: agent.py  jules-instructions.md
src/agents/interface_developer/: __init__.py  agent.py  instructions.md  jules-instructions.md
src/agents/issue_escalation/: __init__.py  agent.py  instructions.md
src/agents/jules_cleaner/: __init__.py  agent.py
src/agents/jules_tracker/: __init__.py  agent.py  utils.py
src/agents/pr_assistant/: __init__.py  agent.py  clawpatch_reviewer.py  conflict_resolver.py  instructions.md  merge_handler.py  notifications.py  pipeline.py  pipeline_fixer.py  telegram_summary.py  utils.py
src/agents/pr_sla/: __init__.py  agent.py  instructions.md
src/agents/product_manager/: __init__.py  agent.py  instructions.md  jules-instructions.md  roadmap_generator.py  utils.py
src/agents/project_creator/: agent.py  jules-instructions.md
src/agents/readme_curator/: __init__.py  agent.py  instructions.md
src/agents/release_watcher/: __init__.py  agent.py  instructions.md
src/agents/secret_remover/: __init__.py  agent.py  ai_analyzer.py  git_utils.py  processor.py  telegram_summary.py  utils.py
src/agents/security_scanner/: __init__.py  agent.py  scanner.py  telegram_summary.py  workflow_policy.py
src/agents/senior_developer/: __init__.py  agent.py  analyzers.py  burst_manager.py  instructions.md  jules-instructions-audit.md  jules-instructions-cicd.md  jules-instructions-feature-enhancement.md  jules-instructions-features.md  jules-instructions-modernization.md  jules-instructions-performance.md  jules-instructions-security.md  jules-instructions-tech-debt.md  task_creator.py  utils.py
src/ai/: __init__.py  base.py  factory.py  gemini.py  litellm_client.py  ollama.py  openai.py
src/config/: __init__.py  repository_allowlist.py  settings.py
src/jules/: __init__.py  client.py
src/notifications/: __init__.py  telegram.py
src/utils/: __init__.py  git_utils.py  health.py  logger.py  retry.py
src/webhooks/: __init__.py  auth.py  dispatcher.py  server.py  store.py
tests/: __init__.py  conftest.py  homolog_conflict_resolver.py  test_agent.py  test_agent_ai_config.py  test_agents_coverage.py  test_ai.py  test_ai_client.py  test_ai_client_coverage_v2.py  test_ai_client_providers.py  test_ai_provider_selection.py  test_base_agent.py  test_ci_health_agent.py  test_ci_health_utils.py  test_clawpatch_reviewer.py  test_cli_coverage.py  test_code_reviewer.py  test_conflict_resolver_agent.py  test_conflict_types.py  test_coverage_gaps_v4.py  test_final_coverage.py  test_final_coverage_v2.py  test_generate_missing_docs.py  test_github_client.py  test_github_client_gaps.py  test_github_client_gaps_v2.py  test_google_bot_suggestions.py  test_intelligence_standardizer_agent.py  test_interface_developer.py  test_interface_developer_coverage.py  test_interface_developer_extras.py  test_jules_cleaner_agent.py  test_jules_client.py  test_jules_client_coverage.py  test_jules_tracker_agent.py  test_jules_tracker_agent_coverage.py  test_juninmd_integration.py  test_litellm_client.py  test_logger.py  test_main.py  (+57 more)
tests/smoke/: test_jules_e2e_smoke.py  test_jules_smoke.py
tools/: fetch_top_repos_by_commits.py
