[project]
name = "pr-assistant"
version = "2.0.0"
description = "Automated development team with AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "ollama>=0.6.1",
    "pygithub>=2.8.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pr-assistant = "src.main:main"
run-agent = "src.run_agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "responses>=0.25.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (enforced by line-length setting)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
